# se-toolkit-hackathon

./: .env.example  .gitignore  PLAN.md  README.md  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/app/: crud.py  database.py  main.py  models.py  schemas.py  seed.py
bot/: Dockerfile  bot.py  config.py  pyproject.toml
bot/handlers/: __init__.py  commands.py
bot/services/: __init__.py  api.py  jokes.py  rating.py
client/: index.html  nginx.conf
