[project]
name = "trakhtenberg-jokes-bot"
version = "0.1.0"
description = "Telegram bot that sends jokes and quotes from Roman Trakhtenberg's comedy repertoire"
requires-python = ">=3.12"
dependencies = ["aiogram>=3.20", "httpx==0.28.1", "pydantic-settings==2.12.0"]

[tool.setuptools.packages.find]
include = ["handlers*", "services*"]
